--- a/index.html
+++ b/index.html
@@ -7,5 +7,22 @@
   </head>
   <body>
     <h1>Luyện tập với github</h1>
+    <pre>
+      &lt;!DOCTYPE html&gt;
+  &lt;html&gt;
+  &lt;head&gt;
+    &lt;title&gt;Largest companies by market cap — &lt;/title&gt;
+    &lt;meta charset="UTF-8" /&gt;
+  &lt;/head&gt;
+  &lt;body&gt;
+    &lt;h1&gt;Apple : 2037 Billion&lt;/h1&gt;
+    &lt;h2&gt;Microsoft : 1624 Billion&lt;/h2&gt;
+    &lt;h3&gt;Amazon : 1611 Billion&lt;/h3&gt;
+    &lt;h4&gt;Google : 1058 Billion&lt;/h4&gt;
+    &lt;h5&gt;Alibaba : 826 Billion&lt;/h5&gt;
+    &lt;b&gt;This data is as of 21 Sep 2020.&lt;/b&gt;
+   &lt;/body&gt;
+&lt;/html&gt;
+    </pre>
   </body>
 </html>
